@@ -371,6 +371,53 @@ name|emptyList
 argument_list|()
 return|;
 block|}
+name|boolean
+name|mightContainRangeQuery
+init|=
+operator|(
+name|original
+operator|.
+name|indexOf
+argument_list|(
+literal|'['
+argument_list|)
+operator|!=
+operator|-
+literal|1
+operator|||
+name|original
+operator|.
+name|indexOf
+argument_list|(
+literal|'{'
+argument_list|)
+operator|!=
+operator|-
+literal|1
+operator|)
+operator|&&
+operator|(
+name|original
+operator|.
+name|indexOf
+argument_list|(
+literal|']'
+argument_list|)
+operator|!=
+operator|-
+literal|1
+operator|||
+name|original
+operator|.
+name|indexOf
+argument_list|(
+literal|'}'
+argument_list|)
+operator|!=
+operator|-
+literal|1
+operator|)
+decl_stmt|;
 name|Collection
 argument_list|<
 name|Token
@@ -492,6 +539,20 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+block|}
+if|if
+condition|(
+name|mightContainRangeQuery
+operator|&&
+literal|"TO"
+operator|.
+name|equals
+argument_list|(
+name|word
+argument_list|)
+condition|)
+block|{
+continue|continue;
 block|}
 if|if
 condition|(
